--- a/predavanja/primeri-SVG/PrviSvg.html
+++ b/predavanja/primeri-SVG/PrviSvg.html
@@ -6,6 +6,8 @@
 <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
   <circle cx="100" cy="50" r="40" stroke="black"
   stroke-width="2" fill="#FA2B2C" />
+  <circle cx="140" cy="50" r="30" stroke="#00FF00"
+  stroke-width="7" fill="#red" />
 </svg>
 
 </body>
